--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>JavaScript Team Project</h1>
+    <div id="album_name"></div>
+    <script>
+        async function getAlbumName() {
+            let response = await fetch("http://localhost:8081/albums/5");
+            let album = await response.json();
+            document.getElementById("album_name").innerHTML = album.title;
+        }
+        getAlbumName();
+    </script>
 </body>
 </html>
